syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "GreeterProto";

package org.mvnsearch.spring.boot.reactive.grpc.demo.service;

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {
    }
    // Sends another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloReply) {
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}

message RpcRequest {
    string namespace = 1;
    string apiName = 2;
    bytes params = 3;
}

message RpcResponse {
    bytes result = 1;
    bytes exception = 2;
}